--- a/analysis/references.bib
+++ b/analysis/references.bib
@@ -1054,3 +1054,17 @@ associated authors}},
 	title = {Transitioning to Open Access: An Evaluation of the {UK} {Springer Compact} Agreement Pilot 2016--2018},
 	journal = {College {\&} Research Libraries}
 }
+
+@article{Chinchilla_Rodr_guez_2024,
+  title={Examining the quality of the corresponding authorship field in Web of Science and Scopus},
+  volume={5},
+  ISSN={2641-3337},
+  url={http://dx.doi.org/10.1162/qss_a_00288},
+  DOI={10.1162/qss_a_00288},
+  number={1},
+  journal={Quantitative Science Studies},
+  publisher={MIT Press},
+  author={Chinchilla-Rodríguez, Zaida and Costas, Rodrigo and Robinson-García, Nicolás and Larivière, Vincent},
+  year={2024},
+  pages={76–97}
+  }
