--- a/analysis/references.bib
+++ b/analysis/references.bib
@@ -1068,3 +1068,35 @@ associated authors}},
   year={2024},
   pages={76–97}
   }
+
+@report{norway, 
+  doi = {10.18711/2KZ1-BA97}, 
+  author = {Holden, Lars and Skoie, Mathilde and Røeggen, Vidar and Bjerde, Katrine Weisteen and Wenaas, Lars and Bakke, Pål and Løvhaug, Johannes Waage and Karlsen, Espen Sandøe and Qvenild, Marte}, 
+  title = {Strategi for vitenskapelig publisering etter 2024}, 
+  publisher = {Sikt}, 
+  year = {2023}
+ }
+ 
+  @article{Widding_2024,  
+   title={Beyond Transformative Agreements: Ways Forward for Universities},  
+   url={http://dx.doi.org/10.1017/S1062798724000036},  
+   doi={10.1017/s1062798724000036},  
+   journal={European Review},  
+   author={Widding,  
+   Astrid Söderbergh},  
+   year={2024},  
+   pages={1–11}
+   }
+   
+@misc{ludo_waltman_2022_7105355,
+  author       = {Ludo Waltman and
+                  Wout S. Lamers},
+  title        = {{Monitoring Open Access publishing of NWO-funded 
+                   research  (2015-2021)}},
+  month        = sep,
+  year         = 2022,
+  publisher    = {Zenodo},
+  version      = 1,
+  doi          = {10.5281/zenodo.7105355},
+  url          = {https://doi.org/10.5281/zenodo.7105355}
+}
